
Commands:
 * @dolist now accepts /inline and related switches, like @switch does.
   Suggested by Reaver. [MG]
 * @teleport/list teleports a list of objects to a single destination.
   Suggested by Nyssa, [MUX]. [MG]
 * @sockset and SOCKSET can now show/set PROMPT_NEWLINES. [MG]
 * @halt now takes a /noeval switch, and will always strip curly braces when
   run /noeval. [MG]

Functions:
 * lpids()' second argument has been altered slightly, to allow you to list
   the pids for one specific object only. Suggested by spork. [MG]
 * The "player" field in pidinfo() has been renamed to "executor", for
   clarity. "player" still works for backwards compatability. From a request
   by tsen. [MG]
 * stringsecs() can now handle the additional time periods that etime() can 
   return (years, weeks). [MG]
 * colors(..., name) is much more efficient. [SW]
 * alias(object,) clears object's @alias. Suggested by spork. [MG]
 * v(<integer>) is no longer the same as get(me/<integer>). Instead, it
   always the <integer>th stack entry. [MG] [Rhost] [MUX]
 * It's now documented that replace() can alter multiple words at once. 
   Reported by Jules. [MG]
 * Some terminfo() information can now be retrieved by mortals on other 
   players' connections. Suggested by spork. [MG]
 * Added a new option to colors() to include ansi underline, invert and 
   flash from the input in the output. [MG]
 * locate() takes a new flag, 's', which will only return objects
   controlled by the looker. Suggested by spork. [MG]

Minor changes:
 * ansi() now accepts a space-separated list of color codes, with later
   groups overriding earlier ones. Allows you to specify basic ANSI codes
   after XTERM color codes. Suggested by spork, [Rhost]. [MG]
 * Compiler warning fixed by ChaosMageX.
 * Help fixes. [MG]
 * The tables mapping color names and RGB values are now generated by a
   script in utils/. [SW]
 * Converting from named colors to the nearest xterm or ansi equivalent is