@@ -30,153 +30,154 @@
 #define SWITCH_CONTENTS 27
 #define SWITCH_COUNT 28
 #define SWITCH_CREATE 29
-#define SWITCH_DB 30
-#define SWITCH_DEBUG 31
-#define SWITCH_DECOMPILE 32
-#define SWITCH_DELETE 33
-#define SWITCH_DELIMIT 34
-#define SWITCH_DESCRIBE 35
-#define SWITCH_DESTROY 36
-#define SWITCH_DISABLE 37
-#define SWITCH_DOWN 38
-#define SWITCH_DSTATS 39
-#define SWITCH_EMIT 40
-#define SWITCH_ENABLE 41
-#define SWITCH_ENUM 42
-#define SWITCH_EQSPLIT 43
-#define SWITCH_ERR 44
-#define SWITCH_EXITS 45
-#define SWITCH_FILE 46
-#define SWITCH_FIRST 47
-#define SWITCH_FLAGS 48
-#define SWITCH_FOLDERS 49
-#define SWITCH_FORWARD 50
-#define SWITCH_FREESPACE 51
-#define SWITCH_FSTATS 52
-#define SWITCH_FULL 53
-#define SWITCH_FUNCTIONS 54
-#define SWITCH_FWD 55
-#define SWITCH_GAG 56
-#define SWITCH_GLOBALS 57
-#define SWITCH_HEADER 58
-#define SWITCH_HERE 59
-#define SWITCH_HIDE 60
-#define SWITCH_IGNORE 61
-#define SWITCH_ILIST 62
-#define SWITCH_INLINE 63
-#define SWITCH_INPLACE 64
-#define SWITCH_INSIDE 65
-#define SWITCH_INVENTORY 66
-#define SWITCH_IPRINT 67
-#define SWITCH_JOIN 68
-#define SWITCH_LEAVE 69
-#define SWITCH_LETTER 70
-#define SWITCH_LIMIT 71
-#define SWITCH_LIST 72
-#define SWITCH_LOCAL 73
-#define SWITCH_LOCALIZE 74
-#define SWITCH_LOCKS 75
-#define SWITCH_LOWERCASE 76
-#define SWITCH_LSARGS 77
-#define SWITCH_ME 78
-#define SWITCH_MEMBERS 79
-#define SWITCH_MOD 80
-#define SWITCH_MOGRIFIER 81
-#define SWITCH_MORTAL 82
-#define SWITCH_MOTD 83
-#define SWITCH_MUTE 84
-#define SWITCH_NAME 85
-#define SWITCH_NO 86
-#define SWITCH_NOBREAK 87
-#define SWITCH_NOCASE 88
-#define SWITCH_NOEVAL 89
-#define SWITCH_NOFLAGCOPY 90
-#define SWITCH_NOISY 91
-#define SWITCH_NOPARSE 92
-#define SWITCH_NOSIG 93
-#define SWITCH_NOSPACE 94
-#define SWITCH_NOSPOOF 95
-#define SWITCH_NOTIFY 96
-#define SWITCH_NUKE 97
-#define SWITCH_OEMIT 98
-#define SWITCH_OFF 99
-#define SWITCH_ON 100
-#define SWITCH_OPAQUE 101
-#define SWITCH_OUTSIDE 102
-#define SWITCH_OVERRIDE 103
-#define SWITCH_PAGING 104
-#define SWITCH_PANIC 105
-#define SWITCH_PARANOID 106
-#define SWITCH_PARENT 107
-#define SWITCH_PLAYER 108
-#define SWITCH_PLAYERS 109
-#define SWITCH_PORT 110
-#define SWITCH_POWERS 111
-#define SWITCH_PREFIX 112
-#define SWITCH_PRESERVE 113
-#define SWITCH_PRINT 114
-#define SWITCH_PRIVS 115
-#define SWITCH_PURGE 116
-#define SWITCH_QUEUED 117
-#define SWITCH_QUICK 118
-#define SWITCH_QUIET 119
-#define SWITCH_READ 120
-#define SWITCH_REBOOT 121
-#define SWITCH_RECALL 122
-#define SWITCH_REGEXP 123
-#define SWITCH_REGIONS 124
-#define SWITCH_REGISTER 125
-#define SWITCH_REMIT 126
-#define SWITCH_REMOVE 127
-#define SWITCH_RENAME 128
-#define SWITCH_RESTART 129
-#define SWITCH_RESTORE 130
-#define SWITCH_RESTRICT 131
-#define SWITCH_RETRACT 132
-#define SWITCH_RETROACTIVE 133
-#define SWITCH_REVIEW 134
-#define SWITCH_ROOM 135
-#define SWITCH_ROOMS 136
-#define SWITCH_RSARGS 137
-#define SWITCH_SAVE 138
-#define SWITCH_SEE 139
-#define SWITCH_SEEFLAG 140
-#define SWITCH_SELF 141
-#define SWITCH_SEND 142
-#define SWITCH_SET 143
-#define SWITCH_SETQ 144
-#define SWITCH_SILENT 145
-#define SWITCH_SKIPDEFAULTS 146
-#define SWITCH_SPEAK 147
-#define SWITCH_SPOOF 148
-#define SWITCH_STATS 149
-#define SWITCH_STATUS 150
-#define SWITCH_SUMMARY 151
-#define SWITCH_TABLES 152
-#define SWITCH_TAG 153
-#define SWITCH_TELEPORT 154
-#define SWITCH_TF 155
-#define SWITCH_THINGS 156
-#define SWITCH_TITLE 157
-#define SWITCH_TRACE 158
-#define SWITCH_TYPE 159
-#define SWITCH_UNCLEAR 160
-#define SWITCH_UNCOMBINE 161
-#define SWITCH_UNFOLDER 162
-#define SWITCH_UNGAG 163
-#define SWITCH_UNHIDE 164
-#define SWITCH_UNMUTE 165
-#define SWITCH_UNREAD 166
-#define SWITCH_UNTAG 167
-#define SWITCH_UNTIL 168
-#define SWITCH_URGENT 169
-#define SWITCH_USEFLAG 170
-#define SWITCH_WHAT 171
-#define SWITCH_WHO 172
-#define SWITCH_WILD 173
-#define SWITCH_WIPE 174
-#define SWITCH_WIZ 175
-#define SWITCH_WIZARD 176
-#define SWITCH_YES 177
-#define SWITCH_ZONE 178
+#define SWITCH_CSTATS 30
+#define SWITCH_DB 31
+#define SWITCH_DEBUG 32
+#define SWITCH_DECOMPILE 33
+#define SWITCH_DELETE 34
+#define SWITCH_DELIMIT 35
+#define SWITCH_DESCRIBE 36
+#define SWITCH_DESTROY 37
+#define SWITCH_DISABLE 38
+#define SWITCH_DOWN 39
+#define SWITCH_DSTATS 40
+#define SWITCH_EMIT 41
+#define SWITCH_ENABLE 42
+#define SWITCH_ENUM 43
+#define SWITCH_EQSPLIT 44
+#define SWITCH_ERR 45
+#define SWITCH_EXITS 46
+#define SWITCH_FILE 47
+#define SWITCH_FIRST 48
+#define SWITCH_FLAGS 49
+#define SWITCH_FOLDERS 50
+#define SWITCH_FORWARD 51
+#define SWITCH_FREESPACE 52
+#define SWITCH_FSTATS 53
+#define SWITCH_FULL 54
+#define SWITCH_FUNCTIONS 55
+#define SWITCH_FWD 56
+#define SWITCH_GAG 57
+#define SWITCH_GLOBALS 58
+#define SWITCH_HEADER 59
+#define SWITCH_HERE 60
+#define SWITCH_HIDE 61
+#define SWITCH_IGNORE 62
+#define SWITCH_ILIST 63
+#define SWITCH_INLINE 64
+#define SWITCH_INPLACE 65
+#define SWITCH_INSIDE 66
+#define SWITCH_INVENTORY 67
+#define SWITCH_IPRINT 68
+#define SWITCH_JOIN 69
+#define SWITCH_LEAVE 70
+#define SWITCH_LETTER 71
+#define SWITCH_LIMIT 72
+#define SWITCH_LIST 73
+#define SWITCH_LOCAL 74
+#define SWITCH_LOCALIZE 75
+#define SWITCH_LOCKS 76
+#define SWITCH_LOWERCASE 77
+#define SWITCH_LSARGS 78
+#define SWITCH_ME 79
+#define SWITCH_MEMBERS 80
+#define SWITCH_MOD 81
+#define SWITCH_MOGRIFIER 82
+#define SWITCH_MORTAL 83
+#define SWITCH_MOTD 84
+#define SWITCH_MUTE 85
+#define SWITCH_NAME 86
+#define SWITCH_NO 87
+#define SWITCH_NOBREAK 88
+#define SWITCH_NOCASE 89
+#define SWITCH_NOEVAL 90
+#define SWITCH_NOFLAGCOPY 91
+#define SWITCH_NOISY 92
+#define SWITCH_NOPARSE 93
+#define SWITCH_NOSIG 94
+#define SWITCH_NOSPACE 95
+#define SWITCH_NOSPOOF 96
+#define SWITCH_NOTIFY 97
+#define SWITCH_NUKE 98
+#define SWITCH_OEMIT 99
+#define SWITCH_OFF 100
+#define SWITCH_ON 101
+#define SWITCH_OPAQUE 102
+#define SWITCH_OUTSIDE 103
+#define SWITCH_OVERRIDE 104
+#define SWITCH_PAGING 105
+#define SWITCH_PANIC 106
+#define SWITCH_PARANOID 107
+#define SWITCH_PARENT 108
+#define SWITCH_PLAYER 109
+#define SWITCH_PLAYERS 110
+#define SWITCH_PORT 111
+#define SWITCH_POWERS 112
+#define SWITCH_PREFIX 113
+#define SWITCH_PRESERVE 114
+#define SWITCH_PRINT 115
+#define SWITCH_PRIVS 116
+#define SWITCH_PURGE 117
+#define SWITCH_QUEUED 118
+#define SWITCH_QUICK 119
+#define SWITCH_QUIET 120
+#define SWITCH_READ 121
+#define SWITCH_REBOOT 122
+#define SWITCH_RECALL 123
+#define SWITCH_REGEXP 124
+#define SWITCH_REGIONS 125
+#define SWITCH_REGISTER 126
+#define SWITCH_REMIT 127
+#define SWITCH_REMOVE 128
+#define SWITCH_RENAME 129
+#define SWITCH_RESTART 130
+#define SWITCH_RESTORE 131
+#define SWITCH_RESTRICT 132
+#define SWITCH_RETRACT 133
+#define SWITCH_RETROACTIVE 134
+#define SWITCH_REVIEW 135
+#define SWITCH_ROOM 136
+#define SWITCH_ROOMS 137
+#define SWITCH_RSARGS 138
+#define SWITCH_SAVE 139
+#define SWITCH_SEE 140
+#define SWITCH_SEEFLAG 141
+#define SWITCH_SELF 142
+#define SWITCH_SEND 143
+#define SWITCH_SET 144
+#define SWITCH_SETQ 145
+#define SWITCH_SILENT 146
+#define SWITCH_SKIPDEFAULTS 147
+#define SWITCH_SPEAK 148
+#define SWITCH_SPOOF 149
+#define SWITCH_STATS 150
+#define SWITCH_STATUS 151
+#define SWITCH_SUMMARY 152
+#define SWITCH_TABLES 153
+#define SWITCH_TAG 154
+#define SWITCH_TELEPORT 155
+#define SWITCH_TF 156
+#define SWITCH_THINGS 157
+#define SWITCH_TITLE 158
+#define SWITCH_TRACE 159
+#define SWITCH_TYPE 160
+#define SWITCH_UNCLEAR 161
+#define SWITCH_UNCOMBINE 162
+#define SWITCH_UNFOLDER 163
+#define SWITCH_UNGAG 164
+#define SWITCH_UNHIDE 165
+#define SWITCH_UNMUTE 166
+#define SWITCH_UNREAD 167
+#define SWITCH_UNTAG 168
+#define SWITCH_UNTIL 169
+#define SWITCH_URGENT 170
+#define SWITCH_USEFLAG 171
+#define SWITCH_WHAT 172
+#define SWITCH_WHO 173
+#define SWITCH_WILD 174
+#define SWITCH_WIPE 175
+#define SWITCH_WIZ 176
+#define SWITCH_WIZARD 177
+#define SWITCH_YES 178
+#define SWITCH_ZONE 179
 #endif                          /* SWITCHES_H */
