@@ -27,6 +27,7 @@ CONNECTED
 CONTENTS
 COUNT
 CREATE
+CSTATS
 DB
 DEBUG
 DECOMPILE
