@@ -1,6 +1,6 @@
 /* AUTOGENERATED FILE. DO NOT EDIT! */
-static const int max_switch = 178;
-SWITCH_VALUE switch_list[179] = {
+static const int max_switch = 179;
+SWITCH_VALUE switch_list[180] = {
   {"ACCESS", SWITCH_ACCESS, 0},
   {"ADD", SWITCH_ADD, 0},
   {"AFTER", SWITCH_AFTER, 0},
@@ -30,6 +30,7 @@ SWITCH_VALUE switch_list[179] = {
   {"CONTENTS", SWITCH_CONTENTS, 0},
   {"COUNT", SWITCH_COUNT, 0},
   {"CREATE", SWITCH_CREATE, 0},
+  {"CSTATS", SWITCH_CSTATS, 0},
   {"DB", SWITCH_DB, 0},
   {"DEBUG", SWITCH_DEBUG, 0},
   {"DECOMPILE", SWITCH_DECOMPILE, 0},
